Incorpora tilde faltante

--- a/Spanish.tex
+++ b/Spanish.tex
@@ -152,7 +152,7 @@ Leal, Analítico, Proactivo, Riguroso, Gentil, Alta Motivación por el Trabajo, 
     \item El 2003, en \textbf{INNOVA CHILE} como Técnico de campo para las estaciones de combustible ESSO.
     \item El 2002, en \href{https://portal.inacap.cl}{\textbf{INACAP}} como Profesor en varias asignaturas para la carrera de Ingeniería Informática en la sede Osorno.
     \item Desde 2001 al 2002, en \textbf{TECNOLÓGICO DE LA UNIVERSIDAD DE LOS LAGOS} como Profesor en varias asignaturas para la carrera de Técnico en Informática.
-    \item Desde 1999 al 2002, en \href{https://telsur.cl}{\textbf{TELEFONICA DEL SUR}} como Ingeniero de Proyectos para el Area Comercial, Zonal Osorno.
+    \item Desde 1999 al 2002, en \href{https://telsur.cl}{\textbf{TELEFÓNICA DEL SUR}} como Ingeniero de Proyectos para el Area Comercial, Zonal Osorno.
     \item Desde 1997 al 1998, en \textbf{CDI DE LA UNIVERSIDAD DE LOS LAGOS} como Profesor en varias asignaturas la carrera de Ingeniería Informática.
 \end{itemize}
 
@@ -225,7 +225,7 @@ Leal, Analítico, Proactivo, Riguroso, Gentil, Alta Motivación por el Trabajo, 
         \item[Labores:] \textit{Análisis, Diseño y Desarrollo.}
     \end{description}
     \newpage
-    \item Desde 2003 al 2018, Desarrollo, mantenimiento y evolución de un sistema integrado Windows/Android para la recolección de información en terreno para la cosecha de arandanos, utilizando terminales de datos Honeywell, telefonos celulares Samsung y un sistema de pago de nóminas. 
+    \item Desde 2003 al 2018, Desarrollo, mantenimiento y evolución de un sistema integrado Windows/Android para la recolección de información en terreno para la cosecha de arandanos, utilizando terminales de datos Honeywell, teléfonos celulares Samsung y un sistema de pago de nóminas. 
     \begin{description}
         \item[Nombre del Software:] \textbf{SIC.}
         \item[Desarrollado para:] \textit{TRUCAO BERRIES, Rio Negro, Chile.}
