--- a/Spanish.tex
+++ b/Spanish.tex
@@ -180,7 +180,7 @@ Leal, Analítico, Proactivo, Riguroso, Gentil, Alta Motivación por el Trabajo, 
         \item[Nombre del Software:] \textbf{SICE.}
         \item[Desarrollado para:] \textit{ALVAREZ \& ASOCIADOS S.p.A., Osorno, Chile.}
         \item[Posición:] \textit{Analista y Desarrollador.}
-        \item[Herramientas:] \textit{Visual Studio 2022, C\#, Excel, Ceres ERP.}
+        \item[Herramientas:] \textit{Visual Studio 2019-2022, C\#, Excel, Ceres ERP.}
         \item[Labores:] \textit{Análisis, Diseño y Desarrollo.}
     \end{description}
     \newpage
@@ -189,7 +189,7 @@ Leal, Analítico, Proactivo, Riguroso, Gentil, Alta Motivación por el Trabajo, 
         \item[Nombre del Software:] \textbf{EXAISTRATEX.}
         \item[Desarrollado para:] \textit{STRATEX CONSULTORES, Osorno, Chile.}
         \item[Posición:] \textit{Analista y Desarrollador.}
-        \item[Herramientas:] \textit{Visual Studio 2022, C\#, Excel.}
+        \item[Herramientas:] \textit{Visual Studio 2019-2022, C\#, Excel.}
         \item[Labores:] \textit{Análisis, Diseño y Desarrollo.}
     \end{description}
     \item Desde 2013 al 2018, Desarrollo de Software e Integración con terminal TRANSBANK lector de tarjetas de debito/crédito para su producto POS INTEGRADO con un sistema WEB.
@@ -197,7 +197,7 @@ Leal, Analítico, Proactivo, Riguroso, Gentil, Alta Motivación por el Trabajo, 
         \item[Nombre del Software:] \textbf{SIPOS.}
         \item[Desarrollado para:] \textit{VITAMINA WORK LIFE, Santiago, Chile.}
         \item[Posición:] \textit{Analista y Desarrollador.}
-        \item[Herramientas:] \textit{Visual Studio 2017, Visual Basic .NET, ASP .NET.}
+        \item[Herramientas:] \textit{Visual Studio 2012-2017, Visual Basic .NET, ASP .NET.}
         \item[Labores:] \textit{Análisis, Diseño y Desarrollo.}
     \end{description}    
     \item Desde 2013 al 2018, Desarrollo de Software e Integración de ERP MANAGER con software de terceros para la emision de documentos tributarios electrónicos (DTE).
@@ -205,7 +205,7 @@ Leal, Analítico, Proactivo, Riguroso, Gentil, Alta Motivación por el Trabajo, 
         \item[Nombre del Software:] \textbf{SIDTE.}
         \item[Desarrollado para:] \textit{SERVIMAQ S.A., Osorno, Chile.}
         \item[Posición:] \textit{Analista y Desarrollador.}
-        \item[Herramientas:] \textit{Visual Studio 2017, Visual Basic .NET, Xml, Dte}
+        \item[Herramientas:] \textit{Visual Studio 2012-2017, Visual Basic .NET, Xml, Dte}
         \item[Labores:] \textit{Análisis, Diseño y Desarrollo.}
     \end{description}
     \item Desde 2012 al 2018, Desarrollo de sistema para planta de empacado de arandanos, integrando balanzas/romanas estaticas y software de terceros, culminando con un sistema autonomo. 
@@ -213,7 +213,7 @@ Leal, Analítico, Proactivo, Riguroso, Gentil, Alta Motivación por el Trabajo, 
         \item[Nombre del Software:] \textbf{SIP.}
         \item[Desarrollado para:] \textit{TRUCAO BERRIES, Rio Negro, Chile.}
         \item[Posición:] \textit{Analista y Desarrollador.}
-        \item[Herramientas:] \textit{Visual Studio 2019, Visual Basic .NET, Rs-232, Tcp-Ip}
+        \item[Herramientas:] \textit{Visual Studio 2012-2019, Visual Basic .NET, Rs-232, Tcp-Ip}
         \item[Labores:] \textit{Análisis, Diseño y Desarrollo.}
     \end{description}
     \item Desde 2011 al 2018, Desarrollo, mantenimiento y evolución de software para control de stock y agendamiento de citas para el cumplimiento de la certificación KODAWARI para concesionarios TOYOTA. 
@@ -230,7 +230,7 @@ Leal, Analítico, Proactivo, Riguroso, Gentil, Alta Motivación por el Trabajo, 
         \item[Nombre del Software:] \textbf{SIC.}
         \item[Desarrollado para:] \textit{TRUCAO BERRIES, Rio Negro, Chile.}
         \item[Posición:] \textit{Analista y Desarrollador.}
-        \item[Herramientas:] \textit{Visual Studio 2017, Visual Basic .NET, Android Studio, Java, Terminales Honeywell, Windows Embedded, Teléfonos Celulares Samsung, Códigos de Barra, Códigos QR, Impresoras Zebra}
+        \item[Herramientas:] \textit{Visual Studio 2002-2017, Visual Basic .NET, Android Studio, Java, Terminales Honeywell, Windows Embedded, Teléfonos Celulares Samsung, Códigos de Barra, Códigos QR, Impresoras Zebra}
         \item[Labores:] \textit{Análisis, Diseño y Desarrollo.}
     \end{description}
     \item Desde 2015 al 2016, Desarrollo de sistema integrado Windows/Android para la recolección de información en terreno de despachos de petroleo y la emisión del correspondiente documento tributario electrónico generado a travez de la automatización de software de terceros. 
@@ -238,7 +238,7 @@ Leal, Analítico, Proactivo, Riguroso, Gentil, Alta Motivación por el Trabajo, 
         \item[Nombre del Software:] \textbf{SIRC.}
         \item[Desarrollado para:] \textit{CONSTRUCTORA HARR S.A., Osorno, Chile.}
         \item[Posición:] \textit{Analista y Desarrollador.}
-        \item[Herramientas:] \textit{Visual Studio 2017, Visual Basic .NET, Android Studio, Java, Transtecnia Contabilidad, Tcp-Ip}
+        \item[Herramientas:] \textit{Visual Studio 2012-2017, Visual Basic .NET, Android Studio, Java, Transtecnia Contabilidad, Tcp-Ip}
         \item[Labores:] \textit{Análisis, Diseño y Desarrollo.}
     \end{description}
     \item En el 2016, Software para la extracción de datos para Balances Contables desde los datos ingresados en ERP FLEXLINE.
@@ -246,7 +246,7 @@ Leal, Analítico, Proactivo, Riguroso, Gentil, Alta Motivación por el Trabajo, 
         \item[Nombre del Software:] \textbf{SIFLEX.}
         \item[Desarrollado para:] \textit{SALMONES CALETA BAY, Osorno, Chile.}
         \item[Posición:] \textit{Analista y Desarrollador.}
-        \item[Herramientas:] \textit{Visual Studio 2017, Visual Basic .NET, ERP Flexline}
+        \item[Herramientas:] \textit{Visual Studio 2015, Visual Basic .NET, ERP Flexline}
         \item[Labores:] \textit{Análisis, Diseño y Desarrollo.}
     \end{description}
     \item Desde 2003 al 2005, Desarrollo para software de control de producción de plantas de proceso de salmón, integrando comunicación con balanzas estáticas y dinámicas, para el calibrado de materia prima, producto términado y registro de embalajes, asi como para los terminales de recolección de datos Honeywell. 
